[gd_scene load_steps=3 format=3 uid="uid://bmtci1b6x51h5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_1ak4j"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_y352n"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ak4j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -423.5
offset_top = -87.5
offset_right = 423.5
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "Game Paused"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 512
theme_override_constants/margin_right = 512
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 32

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Play
"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_y352n")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -395.0
offset_right = 390.0
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Controls"

[node name="Label2" type="Label" parent="MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Toy Movement"

[node name="Label3" type="Label" parent="MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "WASD: Movement / Climb Blocks
Mouse Wheel: Zoom Camera
Spacebar: Jump"

[node name="Label4" type="Label" parent="MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Block Building"

[node name="Label5" type="Label" parent="MarginContainer2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "F : Open Blocks Menu
Left Mouse Button: Grab / let go of a block
WASD: Rotate blocks
R : Reset Block rotation
Mouse Wheel: Move block up and down
"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_hovered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
